Happy with links. Chose some colors that are AA compliant. Fixed alignment issues for navbar/logo so they don't stretch everywhere.

--- a/src/components/icon-link.scss
+++ b/src/components/icon-link.scss
@@ -1,6 +1,7 @@
 @import '../styles/variables.scss';
 
 a.icon-link{
+    border: none;
 
     &:hover {
         color: $primary-color;
