--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -29,13 +29,17 @@ a {
 // I'm assuming that all links by default will be external links
 // most of them are going to get generated by markdown, so
 // default is the external link
+
 a {
     color: $text-color;
-    transition: color .2s;
+    transition: .2s;
+    text-decoration: none;
+    border-bottom: 2px dashed $text-color;
 
     &:hover {
         color: $primary-complement;
         background-color: $primary-color;
+        border-color: $primary-complement;
     }
 
     &:visited {
@@ -49,27 +53,30 @@ a {
 
 // this is for links in text/blogs/etc that link to other pages
 a.internal-link {
-    text-decoration: none;
+    @include link-reset;
+    display: inline-block;
     position: relative;
     white-space: nowrap;
     z-index: 1;
 
     &::before {
         position: absolute;
+        display: inline-block;
         z-index: -1;
         content: "";
         background-color: $primary-color;
         height: 2px;
         width: 100%;
-        bottom: -2px;
-        transition: height 1s;
+        bottom: 4px;
+        transition: height .4s;
     }
 
     &:hover {
         background-color: $background-color;
+        color: $primary-complement;
 
         &::before {
-            height: 100%;
+            height: 75%;
         }
     }
 
@@ -79,11 +86,12 @@ a.internal-link {
 }
 
 a.logo {
-    text-decoration: none;
+    @include link-reset;
     font-weight: lighter;
 
     &:hover {
         background-color: $background-color;
+        color: $text-color;
     }
 
     &:focus {
