--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -3,3 +3,7 @@
 // - animations/transitions
 // etc. 
 
+@mixin link-reset {
+    text-decoration: none;
+    border: none;
+}
